Update deployment documentation and server configuration for Railway and Vercel integration. Added automatic CORS handling and improved static file serving logic. Updated environment variable settings in examples and deployment guides.

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,6 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/bazaardb"
 PORT=3000
+NODE_ENV=development
+
+# Production (e.g. Railway): set in dashboard for CORS when frontend is on Vercel
+# CORS_ORIGIN=https://your-app.vercel.app
