--- a/client/.env.example
+++ b/client/.env.example
@@ -2,4 +2,4 @@
 # Copy this to .env and fill in your values
 
 # API URL - Update this to your deployed backend URL
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://baazar-scan-mvp-production.up.railway.app
